# intelligent-timetable-generator

./: .env.example  .gitignore  Anti_Gravity_Project_Documentation.md  Dockerfile  Intelligent Timetable Generator PRD v4.0.docx  PROJECT_PRD.md  System Architecture.docx  TimeTableX_Project_Documentation.md  TimeTableX_Technical_DeepDive.md  arch.txt  design inspiration_3 login  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  prd.txt  supabase_schema.sql  test_courses.csv  test_rooms.csv  three.d.ts  tsconfig.json
app/: globals.css  layout.tsx
app/(app)/: layout.tsx
app/auth/: layout.tsx
backend/: Dockerfile  Dockerfile.celery  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  ai_service.py  config.py  constraint_service.py  database.py  db_models.py  main.py  models.py  seed_data.py  store.py  worker.py
backend/app/routers/: __init__.py  ai.py  auth.py  dashboard.py  explain.py  export.py  import_data.py  reports.py  resources.py  schedule.py
backend/app/solver/: engine.py
components/ai/: assistant-panel.tsx  dashboard-ai-panels.tsx
components/auth/: forgot-password-card.tsx  login-card-section.tsx
components/conflicts/: conflict-list.tsx
components/dashboard/: .!10057!dashboard-renderer.tsx  dashboard-renderer.tsx  student-dashboard-renderer.tsx  teacher-dashboard-renderer.tsx
lib/: config.ts  mock-data.ts  navigation.ts  types.ts
test_data/: courses_stress_test.csv  faculty_stress_test.csv  fuzzy_naming_test.csv  holidays_stress_test.csv  jury_demo.csv  rooms_stress_test.csv  sections_stress_test.csv
(+54 files in other folders)
