[project]
name = "intelligent-timetable-api"
version = "0.1.0"
description = "FastAPI backend for the Intelligent Timetable Generator hackathon app."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.9",
  "celery>=5.3.6",
  "redis>=5.0.1",
  "ortools>=9.10",
  "reportlab>=4.1.0",
  "openpyxl>=3.1.2",
  "pyjwt>=2.8.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
  "pandas>=2.2.1",
  "alembic>=1.13.1"
  ,"supabase>=2.3.0"
  ,"python-dotenv>=1.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
